fixing size in product feature hover desktop 1 line text overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1360,11 +1360,6 @@ text
   color: var(--dark-clr); 
 }
 
-.item .footer li span {
-  -webkit-line-clamp: 2;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
 
 .item .footer li span {
   flex: 1 1 50%;
